# distributedApp

./: README.md  guiaCluster.txt
fileManager/: Dockerfile  filemanager-deployment.yaml  guia.txt
fileManager/source/: CMakeLists.txt
fileManager/source/Client/: main_fm.cpp
fileManager/source/Client/fileManagerStub/: fileManagerStub.cpp  fileManagerStub.h
fileManager/source/Client/localFileManager/: localFilemanager.cpp  localFilemanager.h
fileManager/source/Server/: mainServer.cpp
fileManager/source/Server/fileManagerClass/: filemanager.cpp  filemanager.h
fileManager/source/Server/fileManagerImp/: fileManagerImp.cpp  fileManagerImp.h
fileManager/source/dirprueba/: file1.txt  file2.txt
fileManager/source/operaciones/: operaciones.h
fileManager/source/untilsApi/: utils.cpp  utils.h
multMatrix/: Dockerfile  guia.txt  multmatrix-deployment.yaml
multMatrix/source/: CMakeLists.txt
multMatrix/source/Client/: main_multMatrix.cpp
multMatrix/source/Client/multMatrixStub/: multMatrixStub.cpp  multMatrixStub.h
multMatrix/source/Server/: mainServer.cpp
multMatrix/source/Server/multMatrixClass/: multMatrix.cpp  multMatrix.h
multMatrix/source/Server/multMatrixImp/: multMatrixImp.cpp  multMatrixImp.h
multMatrix/source/operaciones/: operaciones.h
multMatrix/source/untilsApi/: utils.cpp  utils.h
